syntax = "proto3";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";


option csharp_namespace = "big_data.Proto";

package bigdata;


service BigDataSuckers {
  rpc ListCompanies (ListCompaniesRequest) returns (ListCompaniesResponse);
  rpc GetCompanyContacts (GetCompanyContactsRequest) returns (GetCompanyContactsResponse);
  rpc AddContact (AddContactRequest) returns (Contact);
  rpc DeleteContact (DeleteContactRequest) returns (google.protobuf.Empty);
}


// -- DELETE --
message DeleteContactRequest {
  int64 contact_id = 1;
}




// --- Request & Response for ListCompanies ---

message ListCompaniesRequest {
  int32 page_size = 1;         // How many companies per page
  string cursor = 2;           // Cursor to fetch next page
}

message ListCompaniesResponse {
  repeated Company companies = 1; // List of companies
  string next_cursor = 2;         // Cursor for the next page, or empty if end
}

// --- Company Model ---

message Company {
  int64 id = 1;
  string company_name = 2;
  string country = 3;
  string city = 4;
  string full_address = 5;
  string website = 6;
  string category_google = 7;
  google.protobuf.DoubleValue rating_google = 8;
  string rated_count = 9;
  string google_maps_url = 10;
  google.protobuf.Int32Value big_fish_score = 11;
  CompClassification Classification = 12; // `class` is reserved word in many languages!
}

// --- Request & Response for GetCompanyContacts ---

message GetCompanyContactsRequest {
  int64 company_id = 1;
}

message GetCompanyContactsResponse {
  repeated Contact contacts = 1;
}

// --- Contact Model ---

message Contact {
  int64 id = 1;                        // Unique contact ID
  int64 company_id = 2;                 // The company this contact belongs to
  string value = 3;                      // The actual value (e.g., phone number, email)
  ContactType type = 4;                  // Type of the contact (phone, email, etc.)

google.protobuf.BoolValue is_on_whatsapp = 6;
  string contacted_from_email = 7;       // email contact type only
  google.protobuf.BoolValue checked = 8;  // has been handled, contacted or sth
  google.protobuf.Timestamp date = 9;     // last contact
}

// --- Enum for Contact Types ---

enum ContactType {
  CONTACT_TYPE_UNSPECIFIED = 0;
  PHONE = 1;
  EMAIL = 2;
  FACEBOOK = 3;
  LINKEDIN = 4;
  INSTAGRAM = 5;
  OTHER = 6;
}


enum CompClassification {
  COMP_CLASSIFICATION_UNSPECIFIED = 0;
  GOOD_MATCH = 1;
  FUCK_YOU = 2;
  ECOMMERCE = 3;
  GIMME_SOME_LOVE = 4;
}

message AddContactRequest {
  int64 company_id = 1;
  string value = 2;
  ContactType type = 3;
  google.protobuf.BoolValue is_on_whatsapp = 4;
  string contacted_from_email = 5;
  google.protobuf.BoolValue checked = 6;
  google.protobuf.Timestamp date = 7;
}
